--- a/locale/en.yml
+++ b/locale/en.yml
@@ -19,7 +19,7 @@ davwheat:
           fix_errors: Please fix errors above before saving changes
 
         warning: |
-          The ad code should <b>ONLY</b> include the <code>&lt;ins&gt;</code> tag(s), and not any script tags. The scripts are automatically run by
+          The ad code should <b>ONLY</b> include the <code>ins</code> tag(s), and not any script tags. The scripts are automatically run by
           this extension.
 
     forum:
