--- a/locale/en.yml
+++ b/locale/en.yml
@@ -33,6 +33,6 @@ davwheat:
       locations:
         discussion_header: Discussion page (under header)
         header: Header
-        discussion_sidebar: Discussion sidebar
+        sidebar: Side navigation
         footer: Footer
         between_posts: Between posts
