--- a/locale/en.yml
+++ b/locale/en.yml
@@ -6,9 +6,17 @@ davwheat:
       settings:
         enabled_locations: Enabled ad unit locations
 
-        code_input: 'Code for "{for}" ad unit'
+        script_urls: Custom script URL(s)
+        add_script: New
+        script_deletion: To remove a script, leave the textbox blank and press 'Save Changes'.
+
+        code_input: "HTML code"
         code_input_disabled: Enable this location to edit its HTML code.
 
+        js_input: "Javascript code"
+        js_input_disabled: Enable this location to edit its JS code.
+
+        use_adsense: Use AdSense
         pub_id: AdSense Publisher ID
         between_posts_gap: "Between posts: gap between ads"
         allow_after_placeholder: "Between posts: show ad after reply placeholder"
@@ -24,8 +32,11 @@ davwheat:
           code_has_script: One or more of your ad units contain script tags, which are not allowed. Remove these and try again.
 
         warning: |
-          The ad code should <b>ONLY</b> include the <code>ins</code> tag(s), and not any script tags. The scripts are automatically run by
-          this extension.
+          <b>Instructions:</b>
+          <br></br>
+          <b>HTML</b> - Insert HTML content for the ad in this box. Do not insert any {script} tags in this box. They will not be run.
+          <br></br>
+          <b>JS</b> - Insert custom Javascript code to insert in a script tag. This should <b>NOT</b> include the {script} tag itself.
 
     forum:
 
